[project]
name = "nuco"
description = "Nuru Colab Utils"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Andreas LeRoux", email="moshi.na.vioo@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    # Note: Python and license automatically added by some tools
    "Intended Audience :: Other Audience",
    "Topic :: Artistic Software",
]
keywords = [
    "interactive art", "colab"
]
# No default dependencies (submodules deps are optional and should be
# installed individually)
dependencies = []

# This is set automatically by flit using `nuco.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/nuru-nu/nuco"
repository = "https://github.com/nuru-nu/nuco"
# Other: `documentation`, `changelog`

[project.optional-dependencies]

all = [
    "etils[all]",
]

dev = [
    "pytest",
    "pytest-subtests",
    "pytest-xdist",
    "pylint>=2.6.0",
    "yapf",
    "chex",
]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
